--- a/chess_client/package.json
+++ b/chess_client/package.json
@@ -18,10 +18,12 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
+    "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.4.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@types/node": "^22.4.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-redux": "^7.1.33",
