--- a/chess_server/package.json
+++ b/chess_server/package.json
@@ -6,7 +6,9 @@
     "start": "node dist/server.js",
     "dev": "nodemon",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix"
   },
   "keywords": [],
   "author": "",
@@ -19,13 +21,17 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.9.0",
     "@socket.io/admin-ui": "^0.5.1",
     "@types/express": "^4.17.21",
     "@types/node": "^22.3.0",
     "@types/socket.io": "^3.0.2",
     "@types/uuid": "^10.0.0",
+    "eslint": "^9.9.0",
+    "globals": "^15.9.0",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.2.0"
   }
 }
