--- a/chess_server/package.json
+++ b/chess_server/package.json
@@ -16,6 +16,7 @@
   "description": "",
   "dependencies": {
     "chess.js": "^1.0.0-beta.8",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "socket.io": "^4.7.5",
     "uuid": "^10.0.0"
