--- a/chess_client/package.json
+++ b/chess_client/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
+    "react-toastify": "^10.0.5",
     "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.4.0",
     "uuid": "^10.0.0"
